option go_package = "/Users/schmalzhafj/Documents/StackIT/GO-Projects/GO-Rest-API-gRPC/DBs-Micro/gRPC";

service DatabaseService {
  rpc getMultipleDBs (getRequest) returns (getResponse) {}
  rpc getSingleDB (getSingleRequest) returns (getSingleResponse) {}
  rpc createSingleDB (createRequest) returns (createResponse) {}
  rpc updateSingleDB (updateRequest) returns (updateResponse) {}
}

message getRequest {
}

message getResponse {
  repeated string names = 1;
  optional string error = 2;
}

message getSingleRequest {
  required int32 id = 1;
}

message getSingleResponse {
  optional string name = 1;
  optional string error = 2;
}

message createRequest {
  required string name = 1;
}

message createResponse {
  optional string name = 1;
  optional string error = 2;
}

message updateRequest {
  required int32 id = 1;
  required string name = 2;
}

message updateResponse {
  optional string name = 1;
  optional string error = 2;
}